# shared-library-autotools

./: .gitignore  Makefile.am  README.md  cleanAll.sh  configure.ac  run.sh
iMath/: imath.c  imath.h
src/: Makefile.am  main.cpp
